--- a/styles/main/tips.css
+++ b/styles/main/tips.css
@@ -11,3 +11,9 @@
     flex-basis: 25%;
     margin: 1em 0;
 }
+
+.tip__category {
+    font-size: 0.8em;
+    font-style: oblique;
+    padding-top: 1em;
+}
